# pythonProject9

./: .gitignore  db.json  pyproject.toml
config/: settings.py  urls.py
materials/: models.py  serializers.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: fill.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_avatar_user_city_and_more.py  0003_payments.py  0004_alter_payments_paid_course_and_more.py  0005_payments_link_payments_session_id_and_more.py
